<resources>
    <string name="app_name">MyDictionaryLite</string>
    <string name="dict_title">My Dictionary</string>
    <string name="test_button">Repeat nouns</string>
    <string name="nouns">My nouns</string>
    <string name="new_noun">Add new noun</string>
    <string name="text_noun">Noun</string>
    <string name="radio_type">Type</string>
    <string name="text_translate">Translate</string>
    <string name="noun_hint">Enter noun</string>
    <string name="translate_hint">Enter translation for noun</string>
    <string name="der_item">Der</string>
    <string name="das_item">Das</string>
    <string name="die_item">Die</string>
    <string name="delete_noun">Delete noun</string>
    <string name="context_menu_delete">Delete selected</string>
    <string name="test_noun">Noun</string>
    <string name="test_translate">Show translate</string>
    <string name="noun_test_translate">Noun translate/plural</string>
    <string name="next_noun">Next noun</string>
    <string name="add_noun">Add noun</string>
    <string name="text_plural">Plural form</string>
    <string name="plural_hint">Enter plural form of noun</string>
    <string name="test_plural">Show plural</string>
    <string name="verbs">My verbs</string>
    <string name="text_verb">Verb</string>
    <string name="verb_hint">Enter verb</string>
    <string name="check_verb_form">Irregular</string>
    <string name="text_ich">ich</string>
    <string name="text_du">du</string>
    <string name="text_er_sie_es">er/sie/es</string>
    <string name="text_wir">wir</string>
    <string name="text_ihr">ihr</string>
    <string name="text_sie">sie</string>
    <string name="text_Sie">Sie</string>
    <string name="add_verb">Add verb</string>
    <string name="delete_verb">Delete verb</string>
    <string name="translate_hint_verb">Enter translate for verb</string>
</resources>
